[package]
name = "rust-proxy"
version = "0.1.0"
edition = "2021"
authors = ["Lut99"]
repository = "https://github.com/Lut99/rust-proxy"
description = "A Rust-based HTTP proxy service that runs in its own Docker container."


[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
error-trace = { git = "https://github.com/Lut99/error-trace-rs" }
humanlog = { git = "https://github.com/Lut99/humanlog-rs" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serializable = { git = "https://github.com/Lut99/serializable-rs", default-features = false, features = ["serde-yaml"] }
tokio = { version = "1.37", default-features = false, features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "signal"]}


[features]
default = ["https"]

https = []
 